--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -1,6 +1,5 @@
 @import "../../assets/sass/main.scss";
 
 #home {
-  background-color: $background-blue;
   overflow: hidden;
 }
