--- a/src/pages/components/AgamiraSection/AgamiraSection.scss
+++ b/src/pages/components/AgamiraSection/AgamiraSection.scss
@@ -1,19 +1,33 @@
 @import "../../../assets/sass/main.scss";
 
 .agamira {
-  background-image: url("../../../assets/img/background-urban.png");
-  background-position: center center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-attachment: fixed;
+  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  width: 100%;
+  height: 100dvh;
+  transition: height 0.2s ease-in-out;
+  background-color: transparent;
+  &--background {
+    position: fixed;
+    top: 0%;
+    left: 0%;
+    width: 100%;
+    height: 100%;
+    background-image: url("../../../assets/img/background-urban.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    z-index: -1;
+  }
   .box {
     margin-top: 40px;
-    margin-left: 10px;
-    position: relative;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
     .logo {
       margin-top: -5px;
       max-width: 205px;
@@ -39,11 +53,6 @@
       line-height: normal;
       letter-spacing: 5.756px;
       text-transform: uppercase;
-    }
-
-    .mira-image {
-      margin-left: 78px;
-      max-width: 385px;
     }
   }
 }
