--- a/src/pages/components/BenefitsSection/BenefitsSection.scss
+++ b/src/pages/components/BenefitsSection/BenefitsSection.scss
@@ -2,6 +2,7 @@
 
 .benefits {
   padding: 24px 0;
+  background-color: $background-blue;
   .container {
     .benefits-content {
       display: flex;
