--- a/src/pages/components/GuideSection/GuideSection.scss
+++ b/src/pages/components/GuideSection/GuideSection.scss
@@ -3,6 +3,7 @@
 .guide {
   padding-top: 40px;
   padding-bottom: 24px;
+  background-color: $background-blue;
   .container {
     .text {
       text-align: center;
