--- a/src/pages/components/MissionSection/MissionSection.scss
+++ b/src/pages/components/MissionSection/MissionSection.scss
@@ -1,42 +1,47 @@
 @import "../../../assets/sass/main.scss";
 
 .mission {
-  mix-blend-mode: lighten;
-  background-repeat: no-repeat;
-  background-position: -325px -110px;
-  background-size: cover;
-  background-image: url("../../../assets/img/background-pattern.svg");
-  .container {
-    h4 {
-      max-width: 250px;
-      margin-top: 47px;
-      margin-bottom: 55px;
-      margin-left: auto;
-      margin-right: auto;
-      text-align: center;
-    }
-    .box {
-      &--image {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        div {
-          img {
-            mix-blend-mode: lighten;
-            max-width: 560px;
+  background-color: $background-blue;
+  padding-top: 47px;
+  &--background {
+    width: 100%;
+    height: 100%;
+    mix-blend-mode: lighten;
+    background-repeat: no-repeat;
+    background-position: -325px -110px;
+    background-size: cover;
+    background-image: url("../../../assets/img/background-pattern.svg");
+    .container {
+      h4 {
+        max-width: 250px;
+        margin-bottom: 55px;
+        margin-left: auto;
+        margin-right: auto;
+        text-align: center;
+      }
+      .box {
+        &--image {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          div {
+            img {
+              mix-blend-mode: lighten;
+              max-width: 560px;
+            }
           }
         }
-      }
-      &--text {
-        text-align: end;
-        h3 {
-        }
-        h2 {
-        }
-        p {
-          margin-bottom: 20px;
-        }
-        .btn--outline {
+        &--text {
+          text-align: end;
+          h3 {
+          }
+          h2 {
+          }
+          p {
+            margin-bottom: 20px;
+          }
+          .btn--outline {
+          }
         }
       }
     }
